# erme_scaling_study

./: README
src/: CMakeLists.txt  FindPETSc.cmake  FindSLEPc.cmake  FindSilo.cmake  Makefile  config_ilmarinen  config_kilkenny  config_scaling  config_vainamoinen  connect.cc  data.cc  data.hh  driver.cc  test.cc  test.hh
